Added structure in index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
-<html>
+<html ng-app="beerApp">
 <head>
 	<script src="JS/angular.min.js"></script>
 </head>
 
 <body>
-	<div></div>
-	<div></div>
-	<div></div>
-	<div></div>
-	<div></div>
+	<header id="banner">
+		<h1>Beer Application</h1>
+	</header>
+	
+	<section id="content">
+		
+	</section>
+	<section id="footer">
+		<h1>Beer Application</h1>
+	</section>
 </body>	
 </html>
